@@ -17,10 +17,10 @@
     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 """
 
-import os
 import sys
 
 from pyrocore.scripts.base import ScriptBase, ScriptBaseWithConfig
+from pyrocore.util import types, os
 from pyrocore.util.metafile import Metafile
 
 
@@ -52,9 +52,8 @@ class MetafileCreator(ScriptBaseWithConfig):
             help="optional human-readable comment")
         self.add_value_option("-X", "--cross-seed", "LABEL",
             help="set explicit label for cross-seeding (changes info hash)")
-# TODO: -H
-#        self.add_bool_option("-H", "--hashed", "--fast-resume",
-#            help="create second metafile containing libtorrent fast-resume information")
+        self.add_bool_option("-H", "--hashed", "--fast-resume",
+            help="create second metafile containing libtorrent fast-resume information")
 # TODO: Set "encoding" correctly
 # TODO: Support multi-tracker extension ("announce-list" field)
 # TODO: DHT "nodes" field?! [[str IP, int port], ...]
@@ -90,12 +89,43 @@ class MetafileCreator(ScriptBaseWithConfig):
         metafile = Metafile(metapath + ".torrent")
         metafile.ignore.extend(self.options.exclude)
 
-        # Write the metafile(s)
         def callback(meta):
-            "Callback to set label."
+            "Callback to set label and resume data."
             if self.options.cross_seed:
                 meta["info"]["x_cross_seed_label"] = self.options.cross_seed
 
+            if self.options.hashed:
+                # Get list of files
+                files = meta["info"].get("files", None)
+                if files is None:
+                    files = [types.Bunch(
+                        path=[os.path.abspath(datapath)],
+                        length=os.path.getsize(datapath),
+                    )]
+
+                # Prepare resume data
+                resume = meta.setdefault("libtorrent_resume", {})
+                resume["bitfield"] = len(meta["info"]["pieces"]) // 20
+                resume["files"] = []
+                piece_length = meta["info"]["piece length"]
+                offset = 0
+
+                for fileinfo in files:
+                    # Get the path into the filesystem
+                    filepath = os.sep.join(fileinfo["path"])
+                    if not os.path.isabs(filepath):
+                        filepath = os.path.join(datapath, filepath)
+
+                    # Add resume data for this file
+                    resume["files"].append(dict(
+                        priority=1,
+                        mtime=int(os.path.getmtime(filepath)),
+                        completed=(offset+fileinfo["length"]+piece_length-1) // piece_length
+                                 - offset // piece_length,
+                    ))
+                    offset += fileinfo["length"]
+
+        # Create and write the metafile(s)
         metafile.create(datapath, self.args[1:], progress=progress, 
             root_name=self.options.root_name, private=self.options.private, no_date=self.options.no_date,
             comment=self.options.comment, created_by="PyroScope %s" % self.version, callback=callback
